Update Bab I dan Bab II

--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -30,11 +30,11 @@ Meskipun tim \textit{Enterprise Architecture} di Paragon Corp baru dibentuk seja
 Kondisi ini menyebabkan duplikasi sistem dan ketiadaan standar arsitektural karena belum ada referensi terhadap arsitektur sebelumnya.
 Evaluasi tata kelola EA menemukan bahwa aspek perancangan EA yang sudah didefinisikan, namun belum dikelola secara menyeluruh akan menghambat efektivitas EA sebagai kerangka strategis \autocite{ghiffari2022evaluasi}.
 
-Dengan mempertimbangkan tantangan tersebut, penelitian ini berfokus kepada analisis perbaikan tata kelola EA sehingga meningkatkan efektivitas peran EA dalam mengambil keputusan di Paragon Corp. 
+Dengan mempertimbangkan tantangan tersebut, tugas akhir ini berfokus kepada analisis perbaikan tata kelola EA sehingga meningkatkan efektivitas peran EA dalam mengambil keputusan di Paragon Corp. 
 
 % --- Rumusan Masalah ---
 \section{Rumusan Masalah}
-Berdasarkan latar belakang masalah yang telah diuraikan di atas, maka rumusan masalah yang akan menjadi pokok pembahasan dalam pengerjaan tugas akhir ini adalah sebagai berikut:
+Berdasarkan latar belakang masalah yang telah diuraikan di atas, rumusan masalah yang akan menjadi pokok pembahasan dalam pengerjaan tugas akhir ini adalah sebagai berikut:
 \begin{enumerate}
 \item	Bagaimana efektivitas tata kelola EA saat ini di Paragon Corp?
 \item	Apa saja \textit{gap} yang perlu ditangani untuk mencapai tingkat kematangan level 3 tata kelola EA?
@@ -44,7 +44,7 @@ Berdasarkan latar belakang masalah yang telah diuraikan di atas, maka rumusan ma
 
 % --- Tujuan ---
 \section{Tujuan}
-Tujuan dari peneliatian ini adalah untuk:
+Tujuan dari tugas akhir ini adalah sebagai berikut:
 \begin{enumerate}
 \item	Menganalisis kondisi tata kelola EA yang saat ini diterapkan di Paragon Corp.
 \item	Mengidentifikasi \textit{gap} antara kondisi saat ini dengan \textit{best practice} EA pada ingkat kematangan level 3 tata kelola EA.
@@ -54,33 +54,33 @@ Tujuan dari peneliatian ini adalah untuk:
 
 % --- Metodologi Pengerjaan TA ---
 \section{Metodologi}
-Metodologi penelitian berikut ini menjelaskan tahapan-tahapan yang dilakukan selama proses penyusunan tugas akhir untuk menjawab rumusan masalah dan mencapai tujuan penelitian.
-Pendekatan yang digunakan bersifat deskriptif kualitatif, dengan fokus pada analisis kondisi saat ini, identifikasi kesenjangan, serta perancangan model \textit{EA Governance} yang sesuai dengan konteks organisasi Paragon Corp.
+Metodologi pengerjaan tugas akhir berikut ini menjelaskan tahapan-tahapan yang dilakukan selama proses penyusunan tugas akhir untuk menjawab rumusan masalah dan mencapai tujuan tugas akhir.
+Pendekatan yang digunakan bersifat deskriptif kualitatif, dengan fokus pada analisis kondisi saat ini, identifikasi \textit{gap}, serta perancangan perbaikan model tata kelola EA yang sesuai dengan konteks organisasi Paragon Corp.
 
-Secara umum, tahapan metodologi penelitian ini terdiri atas beberapa langkah berikut:
+Secara umum, tahapan metodologi tugas akhir ini terdiri atas beberapa langkah berikut:
 \begin{enumerate}
     \item {Tahap investigasi dan pengumpulan fakta} \\
     Tahap ini bertujuan untuk memahami konteks organisasi dan kondisi penerapan EA di Paragon Corp. Kegiatan yang dilakukan meliputi:
     \begin{enumerate}[a.]
-        \item Studi dokumen internal terkait artefak EA, alur kerja, dan kebijakan perusahaan.
+        \item Studi internal terkait artefak EA, alur kerja, dan kebijakan perusahaan.
         \item Observasi terhadap penggunaan \textit{platform} SAP LeanIX dalam proses manajemen arsitektur.
         \item Wawancara dengan pihak terkait untuk mengidentifikasi praktik tata kelola dan pola kolaborasi yang berjalan saat ini. \\
     \end{enumerate}
 
     \item {Tahap studi literatur dan analisis teoretis} \\
     Pada tahap ini dilakukan pengumpulan, pengelompokan, dan penelaahan literatur yang relevan mengenai \textit{Enterprise Architecture}, \textit{EA Governance}, dan \textit{EA Maturity Model}. Literatur yang digunakan mencakup standar internasional seperti TOGAF, artikel ilmiah, serta studi kasus penerapan EA di industri sejenis. 
-    Hasil analisis literatur akan dijelaskan secara sistematis pada Bab II – Studi Literatur sebagai landasan teoretis penelitian. \\
+    Hasil analisis literatur akan dijelaskan secara sistematis pada Bab II – Studi Literatur sebagai landasan teoretis. \\
 
     \item {Tahap analisis kondisi saat ini dan identifikasi \textit{gap}} \\
-    Berdasarkan hasil investigasi dan teori pendukung, dilakukan analisis terhadap efektivitas \textit{EA Governance} saat ini di Paragon Corp. Tahap ini mencakup:
+    Berdasarkan hasil investigasi dan teori pendukung, dilakukan analisis terhadap efektivitas tata kelola EA saat ini di Paragon Corp. Tahap ini mencakup:
     \begin{enumerate}[a.]
         \item Penilaian tingkat kematangan EA menggunakan kerangka \textit{Enterprise Architecture Maturity Model (EAMM)}.
-        \item Identifikasi kesenjangan (\textit{gap analysis}) antara kondisi saat ini dan praktik terbaik (\textit{best practice}) \textit{EA Governance}. \\
+        \item Melakukan (\textit{gap analysis}) antara kondisi saat ini dan \textit{best practice} tata kelola EA. \\
     \end{enumerate}
 
     \item {Tahap perancangan model perbaikan \textit{EA Governance}} \\
-    Pada tahap ini dirancang model perbaikan \textit{EA Governance} yang lebih terstruktur, selaras dengan \textit{maturity level} yang ditargetkan, dan sesuai konteks organisasi. 
-    Model rancangan akan mencakup komponen peran dan tanggung jawab, proses kerja, serta mekanisme evaluasi dan pembaruan artefak EA. \\
+    Pada tahap ini dirancang model perbaikan tata kelola EA yang lebih terstruktur, selaras dengan \textit{maturity level} yang ditargetkan, dan sesuai konteks organisasi. 
+%    Model rancangan akan mencakup komponen peran dan tanggung jawab, proses kerja, serta mekanisme evaluasi dan pembaruan artefak EA. \\
 
     \item {Tahap evaluasi dan validasi model} \\
     Model yang dihasilkan kemudian dievaluasi untuk menilai kelayakan dan dampaknya terhadap efektivitas pengelolaan EA. Evaluasi dilakukan melalui:
