--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -7,34 +7,47 @@
 
 \subsection{Pengertian dan Tujuan \textit{Enterprise Architecture}}
 % Contoh gambar dapat dilihat pada Gambar \ref{gambar:jaringan}. Gambar dan judulnya diposisikan di tengah. Nomor gambar tidak diakhiri tanda titik. Gambar tersebut dibuat menggunakan aplikasi draw.io dan disimpan ke format PNG setelah dengan zoom setting pada angka 300\%. Ukuran gambar yang ditampilkan dapat diatur dengan mengubah nilai \textit{width} dalam sintaks \textit{includegraphics}.
-Definisi dari \textit{Enterprise Architecture} (EA) antara lain sebagai berikut:
-\begin{enumerate}
-  \item Menurut \textcite{ross2006enterprise}, \textit{enterprise architecture} adalah cara organisasi menghubungkan proses bisnis dengan infrastruktur Teknologi Informasi (TI) untuk memastikan integrasi dan standarisasi sesuai dengan model operasional perusahaan.
-  \item Menurut \textcite{ahlemann2012strategic}, \textit{enterprise architecture} adalah penetapan, pemeliharaan, dan penerapan serangkaian panduan, prinsip desain, dan aturan tata kelola yang terpadu sehingga struktur teknologi dan proses bisnis selalu selaras dan efektif dalam mencapai visi dan strategi jangka panjang perusahaan.
-  \item Menurut \textcite{luisi2014pragmatic}, \textit{enterprise architecture} adalah pengembangan kerangka kerja Teknologi Informasi (TI) yang memfasilitasi arah bisnis dan mengatasi kendala utama, dengan mewakili berbagai kepentingan pemangku kepentingan bisnis di seluruh perusahaan. \\
-\end{enumerate}
+% Definisi dari \textit{Enterprise Architecture} (EA) antara lain sebagai berikut:
+% \begin{enumerate}
+%   \item Menurut \textcite{ross2006enterprise}, \textit{enterprise architecture} adalah cara organisasi menghubungkan proses bisnis dengan infrastruktur Teknologi Informasi (TI) untuk memastikan integrasi dan standarisasi sesuai dengan model operasional perusahaan.
+%   \item Menurut \textcite{ahlemann2012strategic}, \textit{enterprise architecture} adalah penetapan, pemeliharaan, dan penerapan serangkaian panduan, prinsip desain, dan aturan tata kelola yang terpadu sehingga struktur teknologi dan proses bisnis selalu selaras dan efektif dalam mencapai visi dan strategi jangka panjang perusahaan.
+%   \item Menurut \textcite{luisi2014pragmatic}, \textit{enterprise architecture} adalah pengembangan kerangka kerja Teknologi Informasi (TI) yang memfasilitasi arah bisnis dan mengatasi kendala utama, dengan mewakili berbagai kepentingan pemangku kepentingan bisnis di seluruh perusahaan. \\
+% \end{enumerate}
 
-Dari pengertian-pengertian tersebut dapat disimpulkan bahwa \textit{enterprise architecture} merupakan fondasi atau panduan tertentu yang memastikan Teknologi Informasi (TI) 
-dan cara kerja perusahaan atau proses bisnis saling terhubung untuk mendukung pencapaian tujuan strategis organisasi.
+% Dari pengertian-pengertian tersebut dapat disimpulkan bahwa \textit{enterprise architecture} merupakan fondasi atau panduan tertentu yang memastikan Teknologi Informasi (TI) 
+% dan cara kerja perusahaan atau proses bisnis saling terhubung untuk mendukung pencapaian tujuan strategis organisasi.
 
-Menurut \textcite{minoli2008enterprise}, sasaran EA adalah menciptakan lingkungan Teknologi Informasi (TI) yang terpadu. 
-Hal ini dicapai melalui standarisasi perangkat keras dan sistem perangkat lunak, mendorong penggunaan kembali aset TI, dan menerapkan metode yang sama dalam manajemen 
-proyek untuk pengembangan perangkat lunak di seluruh unit organisasi. Semua upaya ini dilakukan sambil tetap memastikan keselarasan penuh antara TI dengan strategi dan aspek bisnis organisasi. 
-Hasil yang diharapkan dari penerapan EA adalah menjadikan fungsi TI menjadi lebih hemat biaya, lebih strategis, dan lebih responsif terhadap kebutuhan bisnis.
+% Menurut \textcite{minoli2008enterprise}, sasaran EA adalah menciptakan lingkungan Teknologi Informasi (TI) yang terpadu. 
+% Hal ini dicapai melalui standarisasi perangkat keras dan sistem perangkat lunak, mendorong penggunaan kembali aset TI, dan menerapkan metode yang sama dalam manajemen 
+% proyek untuk pengembangan perangkat lunak di seluruh unit organisasi. Semua upaya ini dilakukan sambil tetap memastikan keselarasan penuh antara TI dengan strategi dan aspek bisnis organisasi. 
+% Hasil yang diharapkan dari penerapan EA adalah menjadikan fungsi TI menjadi lebih hemat biaya, lebih strategis, dan lebih responsif terhadap kebutuhan bisnis.
 
-Tujuan dari EA adalah merancang sebuah \textit{roadmap} yang mencakup aset Teknologi Informasi (TI), proses bisnis, dan prinsip tata kelola. 
-\textit{Roadmap} ini harus mampu mendukung tercapainya strategi bisnis sekaligus menjelaskan secara rinci bagaimana TI akan digunakan untuk merealisasikan strategi tersebut \autocite{minoli2008enterprise}. 
-Tabel \ref{tbl:tujuanEA} menunjukkan persentase dari tujuan mengapa perusahaan membangun \textit{enterprise architecture}.
+% Tujuan dari EA adalah merancang sebuah \textit{roadmap} yang mencakup aset Teknologi Informasi (TI), proses bisnis, dan prinsip tata kelola. 
+% \textit{Roadmap} ini harus mampu mendukung tercapainya strategi bisnis sekaligus menjelaskan secara rinci bagaimana TI akan digunakan untuk merealisasikan strategi tersebut \autocite{minoli2008enterprise}. 
+% Tabel \ref{tbl:tujuanEA} menunjukkan persentase dari tujuan mengapa perusahaan membangun \textit{enterprise architecture}.
 
-\input{table/tabelTujuanEA.tex}
+% \input{table/tabelTujuanEA.tex}
+\textit{Enterprise Architecture} (EA) adalah metode yang membantu organisasi memetakan strategi bisnis, proses, informasi, dan teknologi yang mendukungnya.
+EA berfungsi sebagai kerangka yang memastikan proses bisnis dan Teknologi Informasi (TI) berjalan sesuai standar untuk mencapai tujuan operasional perusahaan \autocite{ross2006enterprise}.
+
+\textcite{ahlemann2012strategic} menjelaskan EA merupakan suatu prinsip, aturan, dan tata kelola yang digunakan oleh organisasi untuk memastikan konsistensi arsitektur dalam mendukung tujuan perusahaan.
+Definisi ini menegaskan bahwa EA bukan hanya sekedar dokumentasi, tetapi juga pendekatan manajemen agar tercapainya tujuan perusahaan.
+
+Sementara itu, TOGAF menjelaskan EA sebagai metode dalam merancang, mengembangkan, dan mengelola arsitektur bisnis, aplikasi, data, dan teknologi.
+EA berfungsi sebagai peta yang menggambarkan bagaimana organisasi terhubung dan berkembang untuk mendukung strategi perusahaan \autocite{TOGAF_Standard_10th}.
+
+Dari berbagai definisi tersebut, disimpulkan bahwa EA berperan sebagai landasan arsitektur yang menghubungkan strategi perusahaan dan operasional secara terstruktur.
+Dengan demikian, EA dapat meningkatkan efisiensi operasional, mengurangi redundansi aplikasi, dan memastikan Teknologi Informasi (TI) tetapi selaras dengan kebutuhan bisnis.
 
 \subsection{Domain Utama \textit{Enterprise Architecture}}
-Komponen fundamental yang membentuk kerangka kerja EA dikenal sebagai \textit{architecture domains} atau \textit{domain arsitektur}. 
-Domain ini adalah pembagian logis yang mengkategorikan berbagai aspek dan perhatian yang harus diatasi oleh arsitek saat merancang sistem yang kompleks \autocite{jager2023getting}.
+\textit{Enterprise Architecture} (EA) dibentuk oleh beberapa kompoenen yang disebut domain arsitektur.
+Domain ini mengkategorikan aspek yang harus diperhatikan oleh arsitek untuk merancang sistem yang kompleks \autocite{jager2023getting}.
 
-\textit{Enterprise Architecture} (EA) dalam konteks TOGAF terbagi menjadi empat domain arsitektur yang saling terkait, yang berfungsi sebagai subsistem dari keseluruhan arsitektur perusahaan. 
-Pembagian ini menjadi panduan utama dalam proses pengembangan arsitektur \textit{Architecture Development Method} (ADM) (Gambar \ref{gambar:adm}), mencakup lapisan bisnis hingga implementasi teknologi \autocite{josey2017togaf}. 
-Gambar \ref{gambar:domain} menunjukkan struktur domain arsitektur \textit{enterprise architecture}.
+Dalam TOGAF, EA terbagi menjadi empat domain arsitektur yang berfungsi sebagai subsistem dari keleuruhan arsitektur perusahaan.
+Pembagian domain ini menjadi struktur utama dalam \textit{Architecture Development Method} (ADM) \autocite{TOGAF_Standard_10th}.
+Gambar \ref{gambar:adm} menunjukkan siklus \textit{Architecture Development Method} (ADM) yang digunakan untuk mengembangkan, mengelola, dan memelihara siklus EA pada organisasi.
+Sementara itu, Gambar \ref{gambar:domain} menunjukkan struktur domain arsitektur EA.
+
 \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
 	\centering
   \captionsetup{justification=centering}
@@ -52,59 +65,104 @@ Gambar \ref{gambar:domain} menunjukkan struktur domain arsitektur \textit{enterp
 \end{figure}
 
 \begin{enumerate}
-    \item  \textit{Business Architecture} \\
-    Domain ini bertujuan untuk mendefinisikan kerangka kerja untuk seluruh operasi perusahaan. Arsitektur bisnis mencakup strategi bisnis, tata kelola (\textit{governance}), organisasi, dan proses bisnis utama. Dalam konteks \textit{phase} B dari ADM, fokus arsitektur ini adalah mengembangkan arsitektur bisnis target dengan memodelkan kapabilitas, fungsi, layanan, dan peran yang diperlukan oleh bisnis untuk merealisasikan visi arsitektur. Artefak yang dihasilkan meliputi struktur organisasi, tujuan bisnis, proses bisnis, dan model data bisnis.\\
+    \item \textit{Business Architecture} \\
+    Domain ini terletak pada \textit{phase} B dari \textit{Architecture Development Method} (ADM) yang menjelaskan tentang strategi, tujuan, kapabilitas, dan proses bisnis organisasi. 
+    Domain ini menggambarkan cara organisasi untuk mencapai nilai yang diberikan kepada pelanggan.\\
 
-    \item  \textit{Information Systems Architectures} \\
-    Domain ini bertujuan untuk mendokumentasikan organisasi fundamental dari sistem TI perusahaan. Arsitektur sistem informasi berfungsi sebagai jembatan antara kebutuhan bisnis dengan teknologi yang akan mendukungnya, dan dipecah menjadi dua sub-komponen utama.
+    \item \textit{Information Systems Architectures} \\
+    Domain ini berperan dalam menjembatani kebutuhan bisnis dengan Teknologi Informasi (TI) yang mendukungnya, dan dipecah menjadi dua sub-komponen utama.
     \begin{enumerate}[a.]
-        \item  \textit{Data Architecture} \\
-        Arsitektur data berfokus pada struktur aset data logis dan fisik serta sumber daya manajemen data organisasi. Dalam \textit{phase} C ADM, tujuannya adalah mendefinisikan jenis dan sumber data yang dibutuhkan bisnis, serta bagaimana data dikelola. Artefak yang dicakup meliputi model data bisnis, model data logis, dan matriks yang memetakan hubungan antara entitas data dengan fungsi bisnis.
+        \item \textit{Data Architecture} \\
+        Domain ini terletak pada \textit{phase} C dari \textit{Architecture Development Method} (ADM) yang menjelaskan struktur dan jenis data yang dapat mendukung proses bisnis secara efektif. 
 
-        \item  \textit{Application Architecture} \\
-        Arsitektur aplikasi menyediakan cetak biru untuk sistem aplikasi individual yang akan diterapkan, termasuk interaksi di antara sistem tersebut dan kaitannya dengan proses bisnis inti. Dalam \textit{phase} C ADM, domain ini mendefinisikan jenis sistem aplikasi yang diperlukan untuk memproses data dan mendukung fungsi bisnis.\\
+        \item \textit{Application Architecture} \\
+        Domain ini terletak pada \textit{phase} C dari \textit{Architecture Development Method} (ADM) yang menjelaskan jenis aplikasi aplikasi yang digunakan untuk mendukung proses bisnis. \\
     \end{enumerate}
 
-    \item  \textit{Technology Architecture} \\
-    Domain ini bertujuan untuk pondasi atau infrastruktur yang mendukung berjalannya seluruh arsitektur aplikasi, data, dan bisnis. Domain ini mendefinisikan secara komprehensif kapabilitas perangkat lunak dan perangkat keras yang dibutuhkan untuk mendukung penerapan layanan bisnis. Cakupan arsitektur teknologi sangat luas, meliputi seluruh infrastruktur TI seperti \textit{middleware}, jaringan, komunikasi, kemampuan pemrosesan, dan standar-standar teknis yang harus dipatuhi. Dalam \textit{phase} D ADM, domain ini mencakup pemodelan komponen teknologi, \textit{platform} teknologi, dekomposisi \textit{platform}, serta spesifikasi rinci mengenai \textit{hardware}, jaringan, dan beban pemrosesan, yang semuanya diperlukan untuk mewujudkan implementasi sistem informasi secara efektif dan efisien.
+    \item \textit{Technology Architecture} \\
+    Domain ini terletak pada \textit{phase} D dari \textit{Architecture Development Method} (ADM) yang menjelaskan infrastruktur Teknologi Informasi (TI) yang diperlukan untuk menjalankan aplikasi dan mengelola data perusahaan. 
 \end{enumerate}
 
-\subsection{Peran \textit{Enterprise Architecture}}
-Menurut \textcite{josey2017togaf}, peran EA dalam menjembatani strategi bisnis dengan implementasi teknologi antara lain sebagai berikut:
-\begin{enumerate}
-  \item Kerangka kerja arsitektur yang terbukti dan andal, berfungsi sebagai alat untuk membantu dalam adopsi, produksi, penggunaan, dan pemeliharaan arsitektur.
-  \item Menyediakan metode \textit{Architecture Development Method} (ADM) untuk mengembangkan arsitektur perusahaan yang secara spesifik dirancang untuk memenuhi persyaratan bisnis.
-  \item Menyediakan \textit{architecture capability framework}, yaitu serangkaian sumber daya untuk mendefinisikan organisasi, proses, peran, dan tanggung jawab yang diperlukan untuk mendirikan dan mengoperasikan praktik arsitektur yang efektif.
-  \item Memandu pengembangan empat domain arsitektur yang saling terkait seperti arsitektur bisnis, arsitektur data, arsitektur aplikasi, dan arsitektur teknologi.
-  \item Memfasilitasi penggunaan kembali aset arsitektur dan mengklasifikasikan \textit{deliverable} melalui konsep \textit{enterprise continuum} dan \textit{architecture repository}.\\
-\end{enumerate} 
+\subsection{Peran \textit{Enterprise Architecture} dalam Transformasi Digital}
+Menurut \textcite{josey2017togaf}, \textit{Enterprise Architecture} (EA) berperan dalam melakukan transformasi digital melalui metode \textit{Architecture Development Method} (ADM).
+Selain itu EA membantu perusahaan dalam menata ulang proses bisnis dan Teknologi Informasi (TI) melalui proses tata kelola yang disediakan TOGAF.
 
-Menurut \textcite{jager2023getting}, peran \textit{enterprise architecture} antara lain sebagai berikut:
-\begin{enumerate}
-  \item Menghubungkan strategi dan eksekusi untuk membantu organisasi mencapai tujuan dan sasarannya.
-  \item Kerangka kerja yang memberikan pemahaman dan pengelolaan struktur dan strategi organisasi secara keseluruhan.
-  \item Menciptakan pandangan holistik dari aktivitas perusahaan, termasuk proses bisnis, sistem informasi, dan infrastruktur teknologi.
-  \item Memastikan bahwa semua elemen organisasi selaras dengan tujuan dan sasaran yang ditetapkan.\\
-\end{enumerate} 
+\textcite{vandewetering2021dynamicenterprisearchitecturecapabilities} menjelaskan bahwa penerapan EA akan membantu perusahaan dalam meningkatkan kegiatan operasional dan mendukung keberhasilan transformasi digital.
+Kapabilitas EA seperti kemampuan adaptif dan integrasi antar domain akan membantu perusahaan terhadap inovasi proses dan keselarasan bisnis dan Teknologi Informasi (TI).
 
-Dari peran-peran EA tersebut dapat disimpulkan bahwa EA sangat penting karena menghubungi strategi bisnis dan implementasi teknologi serta memastikan keselerasan operasional dan tata kelola.
-
-\subsection{Tantangan Penerapan \textit{Enterprise Architecture}}
-Menurut \textcite{jager2023getting}, tantangan dalam mengimplementasikan EA ke dalam praktik nyata antara lain sebagai berikut:
-\begin{enumerate}
-  \item Menerjemahkan kerangka kerja arsitektur yang tersedia menjadi aplikasi praktis yang dapat digunakan.
-  \item Banyak organisasi yang memiliki tingkat kematangan arsitektur yang rendah atau tidak ada sama sekali , sehingga kerangka kerja yang komprehensif terasa berlebihan
-  \item Proses implementasi \textit{enterprise architecture} merupakan masalah yang kompleks dan memakan waktu karena harus mengubah cara kerja yang sudah tertanam dalam sistem dan budaya organisasi.
-  \item \textit{Enterprise architecture} sering menghadapi resistensi karyawan merasa prinsip-prinsip dasar yang diperkenalkan membatasi kebebasan mereka dalam pekerjaan.
-  \item Pencapaian tujuan yang konsisten terhambat jika organisasi gagal dalam menggunakan bahasa yang konsisten dan seragam saat berkomunikasi tentang arsitektur.
-\end{enumerate}
+Walaupun EA memberikan kerangka arsitektur perusahaan, penerapannya tidak akan efektif tanpa mekanisme tata kelola arsitektur.
+TOGAF menjelaskan bahwa tata kelola arsitektur diperlukan supaya pengembangan dan implementasi arsitektur berjalan secara konsisten dan terkontrol \autocite{TOGAF_Standard_10th}.
+Oleh karena itu, perusahaan harus memiliki tata kelola arsitektur agar EA dapat tetap berjalan dan mendukung tujuan strategis perusahaan
 
 \section{\textit{Enterprise Architecture Governance}}
-
 \subsection{Definisi dan Tujuan \textit{Enterprise Architecture Governance}}
-Menurut \textcite{korhonen2009ea}, \textit{EA governance} adalah mekanisme kontrol yang berorientasi ke masa depan yang bertujuan untuk merancang kondisi arsitektur 
-perusahaan di masa depan demi mendukung strategi bisnis. \textit{EA governance} menekankan pada perencanaan dan efektivitas eksternal organisasi secara keseluruhan.
-Tujuan \textit{EA governance} adalah memastikan pengembangan arsitektur bersifat sistemik dan mengarah pada tujuan strategis jangka panjang.
+Menurut \textcite{korhonen2009ea}, \textit{EA Governance} adalah mekanisme kontrol yang berorientasi ke masa depan yang bertujuan untuk merancang kondisi arsitektur perusahaan di masa depan demi mendukung strategi bisnis. 
+\textit{EA Governance} menekankan pada perencanaan dan efektivitas eksternal organisasi secara keseluruhan.
+Tujuan \textit{EA Governance} adalah memastikan pengembangan arsitektur bersifat sistemik dan mengarah pada tujuan strategis jangka panjang.
+
+TOGAF menjelaskan bahwa \textit{EA Governance} merupakan proses yang digunakan untuk mengelola dan mengawasi pengembangan implementasi arsitektur perusahaan supaya sesuai dengan tujuan perusahaan \autocite{TOGAF_Standard_10th}.
+\textcite{foorthuis2016theory} menambahkan bahwa \textit{EA Governance} diperlukan supaya arsitektur dijalankan secara konsisten dalam setiap proyek dan keputusan arsitektur dapat dipertanggungjawabkan.
+Praktik EA akan efektif ketika perusahaan memiliki mekanisme pengawasan, kontrol terhadap kepatuhan, dan forum resmi dalam mengambil keputusan.
+
+\subsection{Komponen Utama \textit{Enterprise Architecture Governance}}
+Menurut TOGAF, \textit{EA Governance} memiliki komponen-komponen utama sebagai berikut \autocite{TOGAF_Standard_10th}:
+\begin{enumerate}
+  \item Struktur Tata Kelola \\
+  Struktur tata kelola menjelaskan tentang peran formal seperti \textit{architecture board}.
+  TOGAF menjelaskan bahwa \textit{architecture board} merupakan komponen penting dalam tata kelola yang berfungsi dalam menjaga konsistensi dan pengawasan arsitektur pada perusahaan. \\
+
+  \item Proses Tata Kelola \\
+  Menurut TOGAF, proses tata kelola berfungsi untuk mengidentifikasi, mengelola, dan menyebarluaskan informasi yang berkaitan dengan arsitektur.
+  Komponen \textit{governance process} yang dijelaskan dalam TOGAF meliputi: 
+  \begin{enumerate}[a.]
+    \item \textit{Policy Management and Take-On} \\
+    Proses ini mengatur perubahan arsitektur dan artefak yang baru dipublikasikan.
+
+    \item \textit{Compliance} \\
+    TOGAF menyatakan bahwa kepatuhan terhadap standar harus dinilai secara konsisten untuk memastikan kesesuaian arsitektur.
+
+    \item \textit{Dispensation (Waiver)} \\
+    TOGAF menyediakan mekanisme \textit{waiver} jika desain atau teknologi tidak dapat memenuhi standar.
+
+    \item \textit{Monitoring and Reporting} \\
+    Proses ini memastikan arsitektur dipantau berdasarkan kriteria yang telah disepakati.
+
+    \item \textit{Business Control and Environment Management} \\
+    Proses ini terkait dengan pengelolaan dokumen, arsitektur, dan pengelolaan informasi.
+  \end{enumerate}
+
+  \textcite{foorthuis2016theory} juga menekankan bahwa \textit{governance process} berperan penting dalam mencegah ketidakkonsistenan arsitektur.\\
+
+  \item Artefak Arsitektur \\
+  TOGAF menegaskan bahwa semua artefak arsitektur harus dikelola melalui \textit{governance process}.
+  Artefak ini berfungsi sebagai pedoman bagi seluruh tim dalam mengembangkan solusi Teknologi Informasi (TI) yang konsisten.\\
+\end{enumerate}
+
+\subsection{Implementasi \textit{Enterprise Architecture Governance}}
+Menurut TOGAF, implementasi tata kelola diatur dalam \textit{phase} G dari \textit{Architecture Development Method} (ADM).
+Pada bagian ini memastikan bahwa proyek implementasi mengikuti arsitektur yang telah disetujui dan mematuhi standar perusahaan \autocite{TOGAF_Standard_10th}.
+Langkah-langkah dalam fase G adalah sebagai berikut:
+\begin{enumerate}
+  \item Konfirmasi Ruang Lingkup dan Prioritas untuk \textit{Deployment} \\
+  Pada tahap awal, ruang lingkup implementasi dan prioritas dikonfirmasi kembali seperti meninjau \textit{roadmap}, dependensi, dan \textit{gap analysis} arsitektur saat ini dan arsitektur target. \\
+
+  \item Mengidentifikasi Sumber Daya \\
+  Perusahaan perlu mengidentifikasi sumber daya dan kompetensi yang diperlukan untuk implementasi.
+  TOGAF menekankan perlu kesiapan tim proyek, kesesuaian metode, dan terjalinnya komunikasi antar unit.\\
+
+  \item Memandu Pengembangan \textit{Deployment} \\
+  Pada proses ini, arsitek memberikan arahan selama implementasi, termasuk standar, batasan teknis, dan model integrasi.\\
+
+  \item Meninjau Kepatuhan Arsitektur \\
+  Selama implementasi, peninjauan kepatuhan dilakukan untuk memastikan desain dan hasil sesuai dengan arsitektur yang telah ditetapkan.\\
+
+  \item Implementasi Proses Bisnis dan Teknologi Informasi \\
+  Solusi yang dibangun akan dijalankan pada lingkungan operasional yang akan diikuti dokumentasi dan \textit{updating baseline architecture} di \textit{repository} perusahaan.\\
+
+  \item Meninjau \textit{Post Implementation} dan \textit{Close Implementation} \\
+  Setelah sistem diluncurkan, TOGAF mengharuskan tinjauan untuk menilai pencapaian tujuan arsitektur dan memperbarui artefak arsitektur.
+  Setelah itu proyek ditutup secara formal.
+\end{enumerate}
 
 \subsection{Tantangan Penerapan \textit{Enterprise Architecture Governance}}
 Menurut \textcite{korhonen2009ea}, tantangan penerapan \textit{EA governance} antara lain sebagai berikut:
@@ -116,7 +174,6 @@ Menurut \textcite{korhonen2009ea}, tantangan penerapan \textit{EA governance} an
 \end{enumerate}
 
 \section{\textit{Enterprise Architecture Maturity Model (EAMM)}}
-
 \subsection{Pengertian dan Tujuan \textit{Enterprise Architecture Maturity Model (EAMM)}}
 Menurut \textcite{jager2023getting}, \textit{Enterprise Architecture Maturity Model} (EAMM) adalah kerangka yang digunakan untuk menilai sejauh mana penerapan EA dalam organisasi
 telah berjalan secara efektif dan berkesinambungan. Model ini membantu organisasi memahami posisi mereka dalam perjalanan pengembangan arsitektur perusahaan, serta memberikan panduan untuk meningkatkan kualitas tata kelola dan implementasi EA secara bertahap.
@@ -150,7 +207,7 @@ melalui integrasi \textit{governance} serta pelaporan digital yang lebih transpa
 Hasil penelitian \textcite{Hanafi2023PeranEA} menegaskan bahwa pelaksanaan \textit{EA Governance} mampu memberikan dampak positif yang nyata terhadap peningkatan kinerja organisasi pemerintahan daerah. 
 Praktik \textit{EA Governance} yang dijalankan dengan baik berpengaruh pada penyusunan struktur organisasi yang rapi, memperlancar proses bisnis, serta meningkatkan kelincahan institusi dalam menghadapi perubahan lingkungan eksternal. Penelitian tersebut juga menunjukkan bahwa faktor kepemimpinan, bila diaplikasikan sebagai variabel moderasi, dapat memperkuat hubungan antara tata kelola EA dan efektivitas organisasi pemerintah.
 
-Dalam penelitian tersebut memiliki kekurangan yang relevan sebagai dasar bagi penelitian ini seperti sebagai berikut: 
+Dalam penelitian tersebut memiliki kekurangan yang relevan sebagai dasar bagi tugas akhir ini seperti sebagai berikut: 
 \begin{enumerate}
   \item Analisis terkait kondisi nyata praktik \textit{EA Governance} masih sangat minim.
   \item Penelitian belum berfokus kepada perancangan model perbaikan \textit{EA Governance} yang menyeluruh.
