--- a/daftar-pustaka.bib
+++ b/daftar-pustaka.bib
@@ -1,3 +1,13 @@
+@misc{vandewetering2021dynamicenterprisearchitecturecapabilities,
+      title={Dynamic enterprise architecture capabilities and organizational benefits: an empirical mediation study}, 
+      author={Rogier van de Wetering},
+      year={2021},
+      eprint={2105.10036},
+      archivePrefix={arXiv},
+      primaryClass={cs.CY},
+      url={https://arxiv.org/abs/2105.10036}, 
+}
+
 @misc{TOGAF_Standard_10th,
   author = {{The Open Group}},
   title = {{The TOGAF Standard, 10th Edition}},
